# sakinah

./: .gitignore  README.md  create_ayah_chunks.py  main.py  pyproject.toml  retrieve_from_rag.py
src/: main.py
src/sakinah-agent/: agent.py
src/sakinah_agent/: agent.py  nodes.py
